# fastapi_practice

minsuman/: config.py  conn.py  example.html  example.py  main.py  pyproject.toml  router.py
