[tool.poetry]
name = "minsuman"
version = "0.1.0"
description = ""
authors = ["qowlsdn8007 <qowlsdn8007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
SQLAlchemy = "^1.4.7"
psycopg2-binary = "^2.8.6"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
python-multipart = "^0.0.5"
starlette = "0.13.6"
Jinja2 = "^2.11.3"
async-exit-stack = "^1.0.1"
async_generator = "^1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
